tests/bad/if_not_bool.oc
/// fail: Condition must be a boolean

def main() {
    if (0) {
    }
}